# arbiter-mcp-firewall

./: Cargo.toml  ROADMAP.md  STATE-OF-THE-UNION.md
crates/arbiter-audit/: Cargo.toml
crates/arbiter-audit/src/: lib.rs
crates/arbiter-engine/: Cargo.toml
crates/arbiter-engine/src/: lib.rs  policy.rs  shadow.rs  signing.rs
crates/arbiter-mcp/: Cargo.toml
crates/arbiter-mcp/src/: compliance.rs  firewall.rs  http.rs  lib.rs  main.rs
crates/arbiter-runtime/: Cargo.toml
crates/arbiter-runtime/src/: client.rs  executor.rs  lib.rs
crates/arbiter-shared/: Cargo.toml
crates/arbiter-shared/src/: boundary.rs  contract.rs  lib.rs  task.rs
crates/arbiter-tests/: Cargo.toml
crates/arbiter-tests/src/: lib.rs
crates/arbiter-tests/tests/: integration.rs
services/setfit/: requirements.txt  server.py
