[workspace]
resolver = "2"
members = [
    "crates/arbiter-shared",
    "crates/arbiter-audit",
    "crates/arbiter-engine",
    "crates/arbiter-runtime",
    "crates/arbiter-mcp",
    "crates/arbiter-tests",
]

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
sha2 = "0.10"
tokio = { version = "1", features = ["full"] }
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
unicode-normalization = "0.1"
reqwest = { version = "0.12", features = ["json"] }
thiserror = "2"
uuid = { version = "1", features = ["v4"] }
