[package]
name = "arbiter-mcp"
version = "0.1.0"
edition = "2024"

[dependencies]
arbiter-shared = { path = "../arbiter-shared" }
arbiter-engine = { path = "../arbiter-engine" }
arbiter-audit = { path = "../arbiter-audit" }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
uuid = { workspace = true }
sha2 = { workspace = true }
axum = { workspace = true }

[dev-dependencies]
tempfile = "3"

[[bin]]
name = "arbiter-firewall"
path = "src/main.rs"
