[package]
name = "arbiter-runtime"
version = "0.1.0"
edition = "2024"

[dependencies]
arbiter-shared = { path = "../arbiter-shared" }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
reqwest = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
